Updated image server generator, groups commands and implemented automod system.